--- a/views/room-choice.ejs
+++ b/views/room-choice.ejs
@@ -2,7 +2,7 @@
 <%- include('partials/navbarLogout.ejs') %>
 
 <div id="animationContainer">
-    <img id="loading" src="/img/choiceLoad.gif">
+    <img id="loading" src="/img/choiceLoad.GIF">
 </div>
 <div class="gradient-background">
     <div class="background-box">
