--- a/views/test.ejs
+++ b/views/test.ejs
@@ -2,7 +2,7 @@
 <%- include('partials/navbarBack.ejs', {linkToPage: `/`}) %> 
 
 <div id="animationContainer">
-    <img id="loadingChoice" src="/img/choiceLoad.gif">
+    <img id="loadingChoice" src="/img/choiceLoad.GIF">
 </div>
 <div id="listPageLayout">
     <div id="leftHandList">
