--- a/views/join-room.ejs
+++ b/views/join-room.ejs
@@ -2,7 +2,7 @@
 <%- include('partials/navbarBackLogout.ejs', {linkToPage: `/room-choice`}) %>
 
 <div id="animationContainer">
-    <img id="loading" src="/img/choiceLoad.gif">
+    <img id="loading" src="/img/choiceLoad.GIF">
 </div>
 <div class="gradient-background">
     <div>
