Removed socket.emit('generateList', ...) in views/partials/navBarLogoutList.ejs:24 so there’s no socket is not defined error injected into /list. Also removed the Socket.IO CDN from views/partials/header.ejs since we’re on Supabase Realtime now.

--- a/views/list.ejs
+++ b/views/list.ejs
@@ -319,7 +319,7 @@ stylesheet: `listPage.css`}) %> <%- include('partials/navBarLogoutList.ejs') %>
         }
 
         let menuDiv = document.getElementById("genreDiv");
-        genreDiv.appendChild(menu);
+        menuDiv.appendChild(menu);
 
         menu.addEventListener("change", filterBySelected2);
       }
