--- a/views/list.ejs
+++ b/views/list.ejs
@@ -628,6 +628,11 @@ stylesheet: `listPage.css`}) %> <%- include('partials/navBarLogoutList.ejs') %>
       }
     });
 
+    // Done rendering; handle any fetch errors
+    } catch (e) {
+      console.error('[LIST] /api/generate failed', e);
+    }
+
     // Presence events above will trigger refresh when needed
   };
   // Call after DOM is ready instead of using an onload attribute
@@ -654,12 +659,7 @@ stylesheet: `listPage.css`}) %> <%- include('partials/navBarLogoutList.ejs') %>
 
   // Shows that the room code has been copied
   function showSuccess() {
-    jSuites.notification({
-      name: "Copied to Clipboard",
-    })(data);
-    } catch (e) {
-      console.error('[LIST] /api/generate failed', e);
-    }
+    jSuites.notification({ name: 'Copied to Clipboard!' });
   }
 
     // Utilizing jSuite notifs to give a simple popup for users in Demo mode
